Change method DbSave

--- a/SampleService/SampleService/Web.config
+++ b/SampleService/SampleService/Web.config
@@ -6,7 +6,7 @@
   <connectionStrings>
 
     <add name="DataBaseContext" 
-         connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=K:\temp\CommonLib\CommonLib\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+         connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=K:\WCF\CommonLib\CommonLib\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
