--- a/IntershipsZ7/IntershipsZ7/App.config
+++ b/IntershipsZ7/IntershipsZ7/App.config
@@ -6,7 +6,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DataBaseContext"
-         connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=K:\temp\CommonLib\CommonLib\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+         connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=K:\WCF\CommonLib\CommonLib\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
