Thin Client WCF

--- a/IntershipsZ7/IntershipsZ7/App.config
+++ b/IntershipsZ7/IntershipsZ7/App.config
@@ -6,7 +6,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DataBaseContext"
-         connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=K:\WCF\CommonLib\CommonLib\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+         connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=K:\Interships-repo\Interships\CommonLib\CommonLib\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -26,14 +26,33 @@
   </entityFramework>
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_ISaver" />
-      </basicHttpBinding>
+      <netTcpBinding>
+        <binding name="NetTcpBinding_IService" />
+      </netTcpBinding>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IService">
+          <security mode="Message">
+            <transport clientCredentialType="Windows" />
+            <message clientCredentialType="Windows" />
+          </security>
+        </binding>
+      </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:59821/SampleService/Saver.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISaver"
-        contract="RemoteService.ISaver" name="BasicHttpBinding_ISaver" />
+      <endpoint address="http://localhost:9080/MyService.Service" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IService" contract="MyService.IService"
+        name="WSHttpBinding_IService">
+        <identity>
+          <userPrincipalName value="JAKEPC\htcvive" />
+        </identity>
+      </endpoint>
+      <endpoint address="net.tcp://localhost:45617/MyService.Service"
+        binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IService"
+        contract="MyService.IService" name="NetTcpBinding_IService">
+        <identity>
+          <userPrincipalName value="JAKEPC\htcvive" />
+        </identity>
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
