--- a/MyService/CommonLib/CommonLib/App.config
+++ b/MyService/CommonLib/CommonLib/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataBaseContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataBaseContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=K:\temp\MyService\CommonLib\CommonLib\ImmovableDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
