--- a/IntershipsZ7/IntershipsZ7/IntershipsZ7.csproj
+++ b/IntershipsZ7/IntershipsZ7/IntershipsZ7.csproj
@@ -100,6 +100,8 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\ChangeNotifier.cs" />
+    <Compile Include="ViewModels\ClientDataContext.cs" />
+    <Compile Include="ViewModels\ImmoEditorViewModel.cs" />
     <Compile Include="ViewModels\ImmovablesViewModel.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\TypesViewModel.cs" />
@@ -126,10 +128,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Connected Services\MyService\IntershipsZ7.MyService.ImmoInfo.datasource">
+    <None Include="Connected Services\MyService\IntershipsZ7.MyService.EssenceSOROfImmovablesz2cTNpOZ.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Connected Services\MyService\IntershipsZ7.MyService.Immovables.datasource">
+    <None Include="Connected Services\MyService\IntershipsZ7.MyService.ListSOROfImmoInfoN5x5yyRL.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\MyService\IntershipsZ7.MyService.ServiceOperationResult1.datasource">
