--- a/MyService/MyService/MyService.csproj
+++ b/MyService/MyService/MyService.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImmoInfo.cs" />
+    <Compile Include="EssenceSOR.cs" />
     <Compile Include="IService.cs" />
+    <Compile Include="ListSOR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="ServiceOperationResult.cs" />
