--- a/IntershipsZ7/IntershipsZ7/IntershipsZ7.csproj
+++ b/IntershipsZ7/IntershipsZ7/IntershipsZ7.csproj
@@ -99,6 +99,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\CaсheProperty.cs" />
     <Compile Include="ViewModels\ChangeNotifier.cs" />
     <Compile Include="ViewModels\ImmoEditorViewModel.cs" />
     <Compile Include="ViewModels\ImmovablesViewModel.cs" />
